<resources>
    <string name="app_name">Media Timer</string>
    <string name="hours_string" />
    <string name="minutes_string" />
    <string name="seconds_string" />
    <string name="hints">00</string>
    <string name="separator_string">:</string>
    <string name="enable_notifications">Notification Options</string>

    <string name="number_of_intervals">Number of intervals:</string>
    <string name="number_of_intervals_default">1</string>
    <string name="timer_format">Timer Format:</string>
    <string name="placeholder_desc">NO DESC</string>
    <string name="group_name">Group Name(N of timers)</string>
    <string name="edit_text_indicator">edit text indicator</string>
    <string name="timer_s_name">Timer Name</string>
    <string name="separator1">H</string>
    <string name="separator2">M</string>
    <string name="separator3">S</string>
    <string name="add_media">Add Media</string>
    <string name="create_timer_options">Create timer</string>

    <string name="create_group_options">Create group</string>
    <string name="change_theme">Change Theme</string>
    <string name="choose_interval_type">Interval type</string>
    <string name="choose_sound">Choose Final Sound</string>
    <string name="name">Name</string>
    <string name="define_intervals_by_number">Define intervals by number</string>
    <string name="random_intervals">Random intervals</string>
    <string name="define_intervals_by_time">Define intervals by time</string>
    <string name="time_between_intervals">Time between Intervals:</string>
    <string name="sounds">Sounds</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="max_number_of_intervals">Max number of intervals:</string>
    <string name="min_number_of_intervals">Min number of intervals:</string>
    <string name="vibration">Vibration</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="no_intervals_notification">No Intervals</string>
    <string name="time_notification">Timed Intervals</string>
    <string name="number_notification">Number of Intervals</string>
    <string name="random_notification">Random Intervals</string>
    <string name="favourites">Favourites</string>
    <string name="create">Create</string>
    <string name="options">Options</string>
    <string name="choose_your_language">Choose your language</string>
    <!-- Strings used for fragments for navigation -->

    <string name="choose_timer_s_colors">Choose timer\'s colors</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="send_e_mail">Send E-mail</string>
    <string name="e_mail_to_reset_your_password">E-mail to reset your password:</string>
    <string name="logout">Logout</string>
    <string name="full_screen_timer">Full Screen Timer</string>
    <string name="delete_timer">Delete Timer</string>
    <string name="progressive_timer">Progressive Timer</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="share_timer">Share Timer</string>

    <string name="active_inactive">Active/Inactive</string>

    <string name="colors">Colors</string>
    <string name="timer_background_color">Timer background</string>
    <string name="text_color">Text</string>a
    <string name="button_icon_color">Button icon</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="current_value">Current Value:</string>
    <string name="red">Red</string>
    <string name="_255">255</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="_0_0_0">0,0,0</string>
    <string name="select_this_color">Select this color</string>
    <string name="theme_your_timer">Theme your timer</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="button_background">Button background</string>
    <string name="button_foreground">Button foreground</string>
    <string name="add_to_group">Add to group</string>
    <string name="button">Button</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="final_alarm">Final Alarm</string>
    <string name="final_sound_volume">Final Sound Volume</string>
    <string name="when_to_stop_the_alarm">When to stop the alarm</string>
    <string name="_100">100</string>
    <string name="how_to_stop">How to stop</string>
    <string name="stop_after_a_number_of_repetitions">Stop after a number of repetitions</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="stop_after_a_certain_time">Stop after a certain time</string>
    <string name="time_to_stop_alarm">Time to stop alarm</string>
    <string name="pick_your_color">Pick your color:</string>
    <string name="todo">TODO</string>
    <string name="randomize_sounds">Randomize Sounds</string>
    <string name="upload">Upload</string>
    <string name="notifications">Notifications</string>
    <string name="type_of_notifications">Type of Notifications:</string>
    <string name="intervals_sounds">Intervals Sounds</string>
    <string name="choose_intervals_sounds">Choose intervals sounds</string>
    <string name="intervals_sound_volume">Intervals Sound Volume</string>
    <string name="prog_desc">Note: A progressive is a timer that will increase or reduce its time depending on how much you use it or not. You can personalize when it does and how much it increases or reduces its time</string>
    <string name="rule_personalization">Rule Personalization:</string>
    <string name="minimum_timer_value">Minimum Timer value</string>
    <string name="maximum_timer_value">Maximum Timer value</string>
    <string name="what_it_takes_to_increase">What it takes to increase:</string>
    <string name="k_unit">Unit</string>
    <string name="t_consecutive_k">Consecutive (Unit)</string>
    <string name="_5">5</string>
    <string name="u_seconds_to_increase">Seconds to increase</string>
    <string name="_15">15</string>
    <string name="history">History:</string>
    <string name="check_history">Check history</string>
    <string name="configure_alarm">Configure Alarm</string>
    <string name="timer">Timer</string>
    <string name="paste">Paste the timer code you want to add</string>
    <string name="timer_code">Timer Code</string>
    <string name="add">ADD</string>
    <string name="sound_1">Sound 1:</string>
    <string name="none">None</string>
    <string name="seconds_to_increase">Seconds to Increase</string>
    <string name="volume_value_default">100</string>
    <string name="initial_sound_time">0:0</string>
    <string name="final_sound_time">10:10</string>
    <string name="group_options">Group Options</string>
    <string name="run_timers_sequentially">Run timers sequentially</string>
    <string name="stops_zeros">Stops at timers with no time remaining when running sequentially</string>
    <string name="skip_groups">Skip groups when running sequentially</string>
    <string name="propagate_colors">Propagate group colors to timers inside</string>


</resources>