<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlarmFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scrollViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/progressiveTimerSeparator"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/NotificationsText1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/final_alarm"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/options_main_separator" />

            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/soundLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="1dp"
                android:background="@drawable/options_delimiter"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/chooseSoundText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/choose_sound"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/soundVolumeLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:background="@drawable/options_delimiter"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/soundVolumeText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/final_sound_volume"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/mainSoundVolumeBar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:max="100" />

                <TextView
                    android:id="@+id/mainSoundVolume"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center_vertical"
                    android:text="@string/_100" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/options_separator" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/alarmConfigTypeSeparator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/typeOfalarmConfigText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/when_to_stop_the_alarm"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/options_separator" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/chooseTypeOfIntervalLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/options_delimiter"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chooseAlarmConfigText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_weight="0.1"
                    android:text="@string/how_to_stop"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/alarmConfigSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:entries="@array/alarm_array" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/defineAlarmRepetitionsSeparator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/defineAlarmRepetitionsText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/stop_after_a_number_of_repetitions"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/options_separator" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/AlarmRepetitionsNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="0dp"
                android:background="@drawable/options_delimiter"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/AlarmRepetitionsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="@string/number_of_repetitions"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/inputAlarmRepetitions"
                    android:layout_width="51dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/number_of_intervals_default"
                    android:textSize="20sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/AlarmTimeSeparator"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AlarmTimeSeparatorText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="@string/stop_after_a_certain_time"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/options_separator" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <LinearLayout
                android:id="@+id/AlarmTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/options_delimiter"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AlarmTimeText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical"
                    android:text="@string/time_to_stop_alarm"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/hoursEditAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_weight="0.2"
                    android:gravity="bottom|center_horizontal"
                    android:hint="@string/hints"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/hours_string"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hoursIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.02"
                    android:gravity="bottom|center"
                    android:text="@string/separator1"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/minutesEditAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="0.2"
                    android:gravity="bottom|center_horizontal"
                    android:hint="@string/hints"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/minutes_string"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/minutesIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.02"
                    android:gravity="bottom|center"
                    android:text="@string/separator2"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/secondsEditAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="0.2"
                    android:gravity="bottom|center_horizontal"
                    android:hint="@string/hints"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/seconds_string"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/secondsIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.02"
                    android:gravity="bottom|center"
                    android:text="@string/separator3"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>